preparing signup page with style

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </div>
       <div>
         <span>do not have an account ? you can sign up</span>
-         <a> <button> sign-up </button> </a>
+         <a href="./Sign-up/signup.html"> <button> sign-up </button> </a>
       </div>
         
     </section>
