adding some validations on signup page

--- a/Sign-up/signup.html
+++ b/Sign-up/signup.html
@@ -11,13 +11,13 @@
 <body>
     <section> 
         <div>
-          <label id="login" for="login">Login</label>
-          <input placeholder="login" type="text"> 
-          <label id="password" for="login">Password</label>
-          <input placeholder="password" type="password"> 
-          <label id="confirm" for="login">Confirm Password</label>
-          <input placeholder="confirm password" type="password"> 
-          <button> Sign Up </button>
+          <label  for="signup-login">Login</label>
+          <input id="signup-login" placeholder="login" type="text"> 
+          <label  for="signup-password">Password</label>
+          <input id="signup-password" placeholder="password" type="password"> 
+          <label  for="signup-confirm-password">Confirm Password</label>
+          <input id="signup-confirm-password" placeholder="confirm password" type="password"> 
+          <button id="signup-button"> Sign Up </button>
         </div>   
       </section>
 </body>
