--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 <body>
     <section> 
       <div>
-        <label id="login" for="login">Login</label>
-        <input placeholder="login" type="text"> 
-        <label id="password" for="login">Password</label>
-        <input placeholder="password" type="password"> 
-        <button> Login </button>
+        <label  for="login">Login</label>
+        <input id="login" placeholder="login" type="text"> 
+        <label  for="password">Password</label>
+        <input id="password" placeholder="password" type="password"> 
+        <button id="login-button"> Login </button>
       </div>
       <div>
         <span>do not have an account ? you can sign up</span>
