adding wrong sign up logic with css

--- a/Sign-up/signup.html
+++ b/Sign-up/signup.html
@@ -19,6 +19,9 @@
           <input id="signup-confirm-password" placeholder="confirm password" type="password"> 
           <button id="signup-button"> Sign Up </button>
         </div>   
+        <div id="wrong-block">
+
+        </div>
       </section>
 </body>
 </html>
