--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="style.css">
-    <script defer src="./app.js"></script>
+    <script type="module" defer src="./app.js"></script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -23,5 +23,10 @@
       </div>
         
     </section>
+
+
+    <div id="user-block">
+
+    </div>
 </body>
 </html>
